# MinecraftDatapackLanguage

./: .gitignore  MDL_AI_SPEC_SHEET.md  Makefile  README.md  WEBSITE_SETUP.md  debug_cli.py  debug_comprehensive.py  debug_exact_cli.py  debug_lexer.py  debug_parser.py  debug_simple.mdl  debug_test.mdl  debug_trace.py  debug_variables.mdl  debug_write.py  demo_lexer.py  pyproject.toml  sample.mdl  test1.mdl  test_compiler.py  test_comprehensive.mdl  test_lexer_debug.mdl  test_lexer_new.py  test_parser.py  test_parser_debug.mdl  test_raw_lexer.py  test_scope_issues.mdl  test_simple_scope.mdl
.github/workflows/: ci.yml  docs.yml  pypi.yml  release.yml  test-examples.yml
.tmp/_mdl_prod_sync/: beet-0.111.0-py3-none-any.whl  mecha-0.99.0-py3-none-any.whl  minecraft_datapack_language-12.0.16-py3-none-any.whl  tokenstream-1.7.0-py3-none-any.whl
debug_dist/: pack.mcmeta
debug_output/: pack.mcmeta
docs/: DYNAMIC_DOWNLOADS.md  Gemfile  downloads.md  examples.md  index.md
docs/_data/: version.yml
docs/_docs/: examples.md  getting-started.md  language-reference.md  local-dev-build.md  python-api.md  vscode-extension.md
docs/_includes/: navigation.html
docs/_site/: feed.xml  index.html  robots.txt  sitemap.xml
examples/: hello_world.mdl
minecraft_datapack_language/: __init__.py  ast_nodes.py  cli.py  cli_build.py  cli_help.py  cli_new.py  expression_processor.py  linter.py  mdl_compiler.py  mdl_lexer.py  mdl_lexer_js.py  mdl_parser.py  mdl_parser_js.py  pack.py
minecraft_datapack_language.egg-info/: PKG-INFO  SOURCES.txt
scripts/: local_mdl.sh  mdlbeta  release.sh  sync_prod_assets.sh  test_dev.sh
temp_output/: pack.mcmeta
test_cli_fixed/: README.md
test_cli_project/: README.md
test_core_output/mdl/: pack.mcmeta
test_examples/: run_all_tests.py
test_final_template/: README.md
test_final_template_fixed/: README.md
test_for_loop/: README.md  test_for_loop.mdl
test_output/mdl/: pack.mcmeta
test_scope_issues_output12/: pack.mcmeta
tests/: test_compiler_fixes.py  test_io.py  test_python_api.py
vscode-extension/: package.json
(+42 files in other folders)
