
[project]
name = "minecraft-datapack-language"
version = "1.0.0"
description = "Compile a tiny MDL language or Python API into a Minecraft datapack (1.21+ ready)."
authors = [{name="Minecraft Datapack Language Team"}]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mdl = "minecraft_datapack_language.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
