[project]
name = "minecraft-datapack-language"
dynamic = ["version"]            # <-- remove the old: version = "…"
description = "Compile a tiny MDL language or Python API into a Minecraft datapack (1.21+ ready)."
requires-python = ">=3.9"

[tool.setuptools_scm]
version_scheme = "post-release"  # e.g., 1.2.3, 1.2.3.post1 on non-tag commits
local_scheme = "no-local-version"
# (optional) If you want a file with the computed version:
write_to = "minecraft_datapack_language/_version.py"

[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["minecraft_datapack_language*"]
exclude = ["dist*", "build*", "scripts*", "tools*", "vscode-extension*", "tests*", "examples*", ".*", "tmp_*", "dist_nesting_test*"]
